--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,5 +9,34 @@ jobs:
       - name: Output system information
         shell: pwsh
         run: |
+          # PowerShell version table
           $PSVersionTable
+
+          # Computer general info (already present in your code)
           Get-ComputerInfo
+
+          # Disk space information
+          Get-PSDrive -PSProvider FileSystem
+
+          # Memory size (RAM)
+          Get-CimInstance -ClassName Win32_PhysicalMemory | Measure-Object -Property Capacity -Sum | ForEach-Object {
+            $totalRAM = "{0:N2}" -f ($_.Sum / 1GB)
+            Write-Output "Total RAM: $totalRAM GB"
+          }
+
+          # IP addresses
+          curl.exe 4.ipw.cn
+          curl.exe 6.ipw.cn
+          curl.exe test.ipw.cn
+
+      - name: Install Remote Desktop
+        shell: pwsh
+        run: |
+          Invoke-WebRequest -Uri "${{ secrets.REMOTE_DESKTOP_URL }}" -OutFile "RemoteDesktop.exe"
+          Start-Process -FilePath "RemoteDesktop.exe" -ArgumentList '--mod=install --cmd=install_silent --path=c:\RemoteDesktop' -Wait
+
+      - name: Wait
+        shell: pwsh
+        run: |
+          # wait 10 minutes
+          start-sleep 600
