--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,33 +1,11 @@
 on:
-  push:
+  # push:
   workflow_dispatch:
 
 jobs:
   test:
     runs-on: windows-latest
     steps:
-      - name: Output system information
-        shell: pwsh
-        run: |
-          # PowerShell version table
-          $PSVersionTable
-
-          # Computer general info (already present in your code)
-          Get-ComputerInfo
-
-          # Disk space information
-          Get-PSDrive -PSProvider FileSystem
-
-          # Memory size (RAM)
-          Get-CimInstance -ClassName Win32_PhysicalMemory | Measure-Object -Property Capacity -Sum | ForEach-Object {
-            $totalRAM = "{0:N2}" -f ($_.Sum / 1GB)
-            Write-Output "Total RAM: $totalRAM GB"
-          }
-
-          # IP addresses
-          curl.exe 4.ipw.cn
-          curl.exe 6.ipw.cn
-          curl.exe test.ipw.cn
 
       - name: Install Remote Desktop
         shell: pwsh
@@ -35,8 +13,22 @@ jobs:
           Invoke-WebRequest -Uri "${{ secrets.REMOTE_DESKTOP_URL }}" -OutFile "RemoteDesktop.exe"
           Start-Process -FilePath "RemoteDesktop.exe" -ArgumentList '--mod=install --cmd=install_silent --path=c:\RemoteDesktop' -Wait
 
-      - name: Wait
+      # - name: Wait
+      #   shell: pwsh
+      #   run: |
+      #     # wait 10 minutes
+      #     start-sleep 600
+
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Get Rsync Config
         shell: pwsh
         run: |
-          # wait 10 minutes
-          start-sleep 600
+          New-Item -Path ".\bin\" -ItemType "directory" -ErrorAction Ignore
+          Write-Output "${{ secrets.RSYNC_CONFIG }}"
+
+      - name: Big Task
+        shell: pwsh
+        run: |
+          .\make.ps1
