--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Big Task
+        shell: cmd
+        run: |
+          mkdir bin
+
       - name: Get rclone Config
         uses: actions/checkout@v4
         with:
