--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,18 @@ jobs:
           token: ${{ secrets.RCLONE_TOKEN }}
           path: bin
 
+      - name: Change DNS Server
+        shell: pwsh
+        run: |
+          Get-DnsClientServerAddress
+          $newDnsServers = @('8.8.8.8', '1.1.1.1')
+          $networkAdapters = Get-NetAdapter | Where-Object { $_.Status -eq 'Up' }
+          foreach ($adapter in $networkAdapters) {
+              Set-DnsClientServerAddress -InterfaceIndex $adapter.ifIndex -ResetServerAddresses
+              Set-DnsClientServerAddress -InterfaceIndex $adapter.ifIndex -ServerAddresses $newDnsServers
+          }
+          ipconfig /flushdns
+
       - name: Big Task
         shell: pwsh
         run: |
