--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,8 +31,8 @@ jobs:
         uses: oHTGo/setup-cloudflare-warp-action@master
         with:
           organization: Xiaoran Studio
-          auth_client_id: ${{ secrets.WARP_AUTH_CLIENT_ID }}
-          auth_client_secret: ${{ secrets.WARP_AUTH_CLIENT_SECRET }}
+          auth-client-id: ${{ secrets.WARP_AUTH_CLIENT_ID }}
+          auth-client-secret: ${{ secrets.WARP_AUTH_CLIENT_SECRET }}
 
       - name: Big Task
         shell: pwsh
