--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -20,7 +20,8 @@ jobs:
         run: |
           $currentUser = $env:USERNAME
           Write-Host "Current User: $(whoami) $currentUser"
-          Set-LocalUser -Name $currentUser -Password ${{ secrets.WIN_PASSWORD }}
+          $password = ConvertTo-SecureString -String '${{ secrets.PASSWORD }}' -AsPlainText -Force
+          Set-LocalUser -Name $currentUser -Password $password -PassThru
 
       - name: Enable Remote Desktop Protocol
         shell: pwsh
