--- a/.github/workflows/rdp.yml
+++ b/.github/workflows/rdp.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           $currentUser = $env:USERNAME
           Write-Host "Current User: $(whoami) $currentUser"
-          $password = ConvertTo-SecureString -String '${{ secrets.PASSWORD }}' -AsPlainText -Force
+          $password = ConvertTo-SecureString -String '${{ secrets.WIN_PASSWORD }}' -AsPlainText -Force
           Set-LocalUser -Name $currentUser -Password $password -PassThru
 
       - name: Enable Remote Desktop Protocol
